--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "discordle",
+  "name": "wordle",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "11.6"
+    "discord.js": "11.6",
+    "node-html-to-image": "^3.2.4",
+    "sharp": "^0.30.4"
   }
 }
