--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "11.6",
+    "env": "^0.0.2",
     "node-html-to-image": "^3.2.4",
     "sharp": "^0.30.4"
   }
